# AllanLearningGenAI

./: .env.example  .gitignore  Makefile  README.md  requirements.txt  setup_check.py
agents/: README.md
agents/starter-kit/: README.md  pyproject.toml
allan_project/: README.md  mcp_remote_servers.example.json  pyproject.toml
allan_project/allan_ollama_mcp/: __init__.py  agent_execute.py  agent_intent_context.py  agent_intent_pipeline.py  agent_llm.py  agent_orchestrator.py  agent_preparse.py  agent_resolve.py  app.py  database.py  kb_connector.py  logging_config.py  mcp_hub.py  mcp_store.py  memory_store.py  ollama_service.py  orch_store.py  policy_engine.py  server.py  settings_store.py  skill_catalog.py
allan_project/allan_ollama_mcp/rag/: __init__.py  hybrid_search.py  memory_chunks.py
allan_project/allan_ollama_mcp/static/: chat.html
allan_project/scripts/: verify_orchestration.py
app/: docker-compose.yml
app/api-gateway/: package-lock.json  package.json
docs/: agent-team-design.md  ai-chaos-arena-2026.md  architecture.md  challenge-catalog.md  deployment-guide.md  dynatrace-setup.md  executive-brief-template.md  gameday-scenarios.md  participant-guardrails.md  rbac-security-model.md  scoring-rubric.md  troubleshooting.md
scripts/: bootstrap.sh  build-and-push.sh  configure-argocd-repo.sh  deploy-apps.sh  deploy-infra.sh  destroy.sh  happy-path-deploy.sh  install-argocd.sh  validate.sh
terraform/: .terraform.lock.hcl  ecr.tf  eks.tf  iam.tf  locals.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
(+242 files in other folders)
